Apr 26, 2004

  * FIXED: Bug#149: Buffer overflow reading too long NAME, NMTOKEN, etc.
    Fabien Todescato.

Jan 17, 2004

  * FIXED: handling <?xml ...?> switching from SGML to XML mode.
    Fabien Todescato.

Jan 9, 2004

  * FIXED: avoid sharing DTD objects between threads.  Fabien Todescato.

Nov 20, 2003

  * ADDED: xml_name/1 to test an atom to refer to a valid XML name.

Nov 3, 2003

  * FIXED: Error parsing SHORTREF declaration that has whitespace at the
    end.  Richard O'Keefe.

Sep 12, 2003

  * FIXED: Memory leak in load_structure/3 (not freeing the parser data).
    Petter Egesund.

Jul 8, 2003

  * ADDED: handle UTF-8 sequences producing characters that cannot be
    represented as character entities.  Suggested by C. M. Sperberg-McQueen.

  * FIXED: handling &#X, where 128<=X<256 with UTF-8 decoding enabled.
    C. M. Sperberg-McQueen.

Jun 9, 2003

  * FIXED: SGML SHORTREF declaration performed case-insensitive entity
    lookup.  Richard O'Keefe.

Jun 4, 2003

  * ENHANCED: type the conflicting CDATA in #PCDATA that violates the DTD

May 23, 2003

  * FIXED: More catalog trouble.  Richard O'Keefe.

May 22, 2003

  * FIXED: Lookup of system identifiers through the catalogue (avoid early
    tagging with file:)  Richard O'Keefe.

May 21, 2003

  * FIXED: Handle -- in element-names (Bijan Parsia).

May 8, 2003

  * Fix registering catalog files

May 5, 2003

  * Incorporated better CATALOG parsing by Richard O'Keefe.  May be incomplete
    or incorrect.

* FIXED: call(end, Goal) passing the element-name incorrectly (breaks
  process_rdf/3).

* FIXED: delay unification of value in load_structure/3.

* FIXED: Properly expand UTF-8 values in CDATA attributes

* FIXED: Properly handle unquoted attributes at the end of an empty element
  in XML mode <foo bar=10/>

* FIXED: #CONREF attribute handling in elements with declared content
  (CDATA/RCDATA).  Richard O'Keefe.

SWI-Prolog VERSION 5.0.10
=========================
